<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kepler.collections.clicker.Settings">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_info_details"
        android:drawablePadding="@dimen/dp_5"
        android:clickable="true"
        android:background="@drawable/transparent_selector"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_20"
        android:text="@string/feedback"
         />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_point_33"
        android:background="@color/grey" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_info_details"
        android:drawablePadding="@dimen/dp_5"
        android:gravity="center_vertical"
        android:clickable="true"
        android:background="@drawable/transparent_selector"
        android:padding="@dimen/dp_20"
        android:text="@string/rate"
        
         />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_point_33"
        android:background="@color/grey" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true"
        android:background="@drawable/transparent_selector"
        android:padding="@dimen/dp_20"
        android:textColor="@color/colorPrimary"
        android:text="@string/change_pass"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:clickable="true"
        android:background="@drawable/transparent_selector"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/logout"/>
    
</LinearLayout>
