<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/imagen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5">

        <TextView
            android:id="@+id/name"
            style="@style/text_color_dark"
            android:layout_width="0dp"
            android:padding="@dimen/dp_3"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_selector"
            android:src="@drawable/heart" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_point_33"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/liked"
        style="@style/text_color_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_selector"
        android:clickable="true"
        android:drawableLeft="@drawable/fill_heart"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_5"
        android:text="@string/liked_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_point_33"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/commented"
        style="@style/text_color_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_selector"
        android:clickable="true"
        android:drawableLeft="@drawable/fill_heart"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_5"
        android:text="@string/commented_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_point_33"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_color_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/transparent_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/fill_heart"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_10"
            android:text="@string/details"
            android:textAllCaps="true" />

        <View
            android:layout_width="@dimen/dp_point_33"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/text_color_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/transparent_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/fill_heart"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_10"
            android:text="@string/share"
            android:textAllCaps="true" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_point_33"
        android:background="@android:color/darker_gray" />
</LinearLayout>